[RIC-432] - Support Update eNB REST API - delete/update/get/add return nodeb response
